/*
===============================================================================
ALFI BOT — AFB-318 / T-22
Instalador canónico de PostgreSQL
===============================================================================

PROPÓSITO
- Permitir que cualquier integrante del equipo cree una base PostgreSQL vacía,
  abra este único archivo en pgAdmin Query Tool y ejecute todo el modelo ALFI.
- Consolidar el estado canónico observado en la base funcional del proyecto.
- Mantener compatibilidad con instalaciones anteriores mediante cambios
  aditivos/idempotentes conocidos.
- No almacenar contraseñas ni crear cuentas LOGIN.
- No eliminar datos de negocio existentes.

FLUJO ESPERADO
1. Crear una base PostgreSQL vacía (por ejemplo alfi_bot_db).
2. Abrir Query Tool conectado a esa base con un usuario administrador.
3. Ejecutar este archivo completo.
4. Configurar backend/.env apuntando a esa base.
5. Ejecutar npm run dev en backend y frontend.

IMPORTANTE
- Los roles PostgreSQL creados aquí son NOLOGIN y sirven exclusivamente para
  demostrar RBAC/mínimo privilegio. Las credenciales LOGIN se administran fuera
  del repositorio.
- El instalador no crea ni administra licencias comerciales.
===============================================================================
*/

BEGIN;

SET LOCAL lock_timeout = '5s';
SET LOCAL statement_timeout = '120s';

-- ============================================================================
-- 0. PRECONDICIONES
-- ============================================================================

DO $$
DECLARE
    current_is_superuser boolean;
    current_can_create_role boolean;
BEGIN
    SELECT rolsuper, rolcreaterole
    INTO current_is_superuser, current_can_create_role
    FROM pg_roles
    WHERE rolname = current_user;

    IF COALESCE(current_is_superuser, false) = false
       AND COALESCE(current_can_create_role, false) = false THEN
        RAISE EXCEPTION
            'ALFI BOT: ejecute el instalador con un usuario PostgreSQL administrador que pueda crear roles (por ejemplo postgres).';
    END IF;
END
$$;

-- ============================================================================
-- 1. ESQUEMA Y EXTENSIÓN
-- ============================================================================

CREATE SCHEMA IF NOT EXISTS alfi;

CREATE EXTENSION IF NOT EXISTS pgcrypto WITH SCHEMA alfi;

COMMENT ON EXTENSION pgcrypto IS 'cryptographic functions';

-- ============================================================================
-- 2. TABLAS BASE — ESTADO CANÓNICO
-- ============================================================================

CREATE TABLE IF NOT EXISTS alfi.roles (
    rol_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre varchar(30) NOT NULL,
    descripcion varchar(150) NOT NULL,
    CONSTRAINT roles_nombre_key UNIQUE (nombre),
    CONSTRAINT chk_rol_nombre CHECK (char_length(btrim(nombre)) >= 3)
);

CREATE TABLE IF NOT EXISTS alfi.usuarios (
    usuario_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    rol_id integer NOT NULL,
    nombre varchar(100) NOT NULL,
    correo varchar(120) NOT NULL,
    password_hash varchar(255) NOT NULL,
    activo boolean NOT NULL DEFAULT true,
    fecha_registro timestamp without time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    celular varchar(10) NOT NULL,
    fecha_actualizacion timestamp without time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    provincia varchar(40),
    rango_edad varchar(10),
    terminos_aceptados boolean,
    terminos_aceptados_en timestamp without time zone,
    terminos_version varchar(20),
    CONSTRAINT usuarios_correo_key UNIQUE (correo),
    CONSTRAINT fk_usuario_rol
        FOREIGN KEY (rol_id)
        REFERENCES alfi.roles(rol_id),
    CONSTRAINT chk_usuario_celular
        CHECK (celular ~ '^09[0-9]{8}$'),
    CONSTRAINT chk_usuario_correo
        CHECK (correo = lower(correo) AND correo LIKE '%@%'),
    CONSTRAINT chk_usuario_nombre
        CHECK (char_length(btrim(nombre)) >= 3),
    CONSTRAINT chk_usuario_password_hash
        CHECK (password_hash ~ '^\$2[aby]\$[0-9]{2}\$'),
    CONSTRAINT chk_usuario_provincia
        CHECK (
            provincia IS NULL
            OR provincia IN (
                'Azuay', 'Bolívar', 'Cañar', 'Carchi', 'Chimborazo',
                'Cotopaxi', 'El Oro', 'Esmeraldas', 'Galápagos', 'Guayas',
                'Imbabura', 'Loja', 'Los Ríos', 'Manabí', 'Morona Santiago',
                'Napo', 'Orellana', 'Pastaza', 'Pichincha', 'Santa Elena',
                'Santo Domingo de los Tsáchilas', 'Sucumbíos', 'Tungurahua',
                'Zamora Chinchipe'
            )
        ),
    CONSTRAINT chk_usuario_rango_edad
        CHECK (
            rango_edad IS NULL
            OR rango_edad IN ('18-24', '25-34', '35-44', '45-54', '55-64', '65+')
        ),
    CONSTRAINT chk_usuario_terminos_coherencia
        CHECK (
            (
                terminos_aceptados IS NULL
                AND terminos_aceptados_en IS NULL
                AND terminos_version IS NULL
            )
            OR
            (
                terminos_aceptados IS TRUE
                AND terminos_aceptados_en IS NOT NULL
                AND nullif(btrim(terminos_version), '') IS NOT NULL
            )
        )
);

CREATE TABLE IF NOT EXISTS alfi.analisis (
    analisis_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    usuario_id integer NOT NULL,
    tipo varchar(20) NOT NULL,
    contenido text NOT NULL,
    vista_previa varchar(250),
    nivel_riesgo varchar(10) NOT NULL,
    resumen text NOT NULL,
    permitido boolean NOT NULL DEFAULT true,
    fecha_creacion timestamp without time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    categoria_fraude varchar(40),
    CONSTRAINT fk_analisis_usuario
        FOREIGN KEY (usuario_id)
        REFERENCES alfi.usuarios(usuario_id),
    CONSTRAINT chk_analisis_categoria_fraude
        CHECK (
            categoria_fraude IS NULL
            OR categoria_fraude IN (
                'credito_falso',
                'ponzi',
                'piramidal',
                'inversion_fraudulenta'
            )
        ),
    CONSTRAINT chk_analisis_contenido
        CHECK (char_length(btrim(contenido)) > 0),
    CONSTRAINT chk_analisis_resumen
        CHECK (char_length(btrim(resumen)) >= 5),
    CONSTRAINT chk_analisis_riesgo
        CHECK (nivel_riesgo IN ('bajo', 'medio', 'alto')),
    CONSTRAINT chk_analisis_tipo
        CHECK (tipo IN ('text', 'link', 'image')),
    CONSTRAINT chk_formato_link
        CHECK (tipo <> 'link' OR contenido ~* '^https?://'),
    CONSTRAINT chk_longitud_link
        CHECK (tipo <> 'link' OR char_length(contenido) <= 2000),
    CONSTRAINT chk_longitud_texto
        CHECK (tipo <> 'text' OR char_length(contenido) <= 5000)
);

CREATE TABLE IF NOT EXISTS alfi.senales_alerta (
    senal_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    analisis_id integer NOT NULL,
    descripcion varchar(300) NOT NULL,
    orden integer NOT NULL DEFAULT 1,
    CONSTRAINT fk_senal_analisis
        FOREIGN KEY (analisis_id)
        REFERENCES alfi.analisis(analisis_id)
        ON DELETE CASCADE,
    CONSTRAINT uq_senal_orden UNIQUE (analisis_id, orden),
    CONSTRAINT chk_senal_descripcion
        CHECK (char_length(btrim(descripcion)) >= 5),
    CONSTRAINT chk_senal_orden
        CHECK (orden > 0)
);

CREATE TABLE IF NOT EXISTS alfi.recomendaciones (
    recomendacion_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    analisis_id integer NOT NULL,
    descripcion varchar(400) NOT NULL,
    orden integer NOT NULL DEFAULT 1,
    CONSTRAINT fk_recomendacion_analisis
        FOREIGN KEY (analisis_id)
        REFERENCES alfi.analisis(analisis_id)
        ON DELETE CASCADE,
    CONSTRAINT uq_recomendacion_orden UNIQUE (analisis_id, orden),
    CONSTRAINT chk_recomendacion_descripcion
        CHECK (char_length(btrim(descripcion)) >= 5),
    CONSTRAINT chk_recomendacion_orden
        CHECK (orden > 0)
);

CREATE TABLE IF NOT EXISTS alfi.auditoria (
    auditoria_id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tabla varchar(50) NOT NULL,
    operacion varchar(10) NOT NULL,
    registro_id varchar(50) NOT NULL,
    usuario_bd varchar(100) NOT NULL DEFAULT CURRENT_USER,
    fecha_operacion timestamp without time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    datos_anteriores jsonb,
    datos_nuevos jsonb,
    CONSTRAINT chk_auditoria_operacion
        CHECK (operacion IN ('INSERT', 'UPDATE', 'DELETE'))
);

CREATE TABLE IF NOT EXISTS alfi.intereses_financieros (
    interes_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo varchar(40) NOT NULL,
    nombre varchar(80) NOT NULL,
    activo boolean NOT NULL DEFAULT true,
    fecha_creacion timestamp without time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_intereses_financieros_codigo UNIQUE (codigo),
    CONSTRAINT uq_intereses_financieros_nombre UNIQUE (nombre),
    CONSTRAINT chk_intereses_financieros_codigo
        CHECK (codigo ~ '^[a-z0-9_]+$'),
    CONSTRAINT chk_intereses_financieros_nombre
        CHECK (char_length(btrim(nombre)) BETWEEN 3 AND 80)
);

CREATE TABLE IF NOT EXISTS alfi.usuario_intereses_financieros (
    usuario_id integer NOT NULL,
    interes_id integer NOT NULL,
    fecha_registro timestamp without time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT pk_usuario_intereses_financieros
        PRIMARY KEY (usuario_id, interes_id),
    CONSTRAINT fk_usuario_interes_usuario
        FOREIGN KEY (usuario_id)
        REFERENCES alfi.usuarios(usuario_id)
        ON UPDATE CASCADE
        ON DELETE CASCADE,
    CONSTRAINT fk_usuario_interes_interes
        FOREIGN KEY (interes_id)
        REFERENCES alfi.intereses_financieros(interes_id)
        ON UPDATE CASCADE
        ON DELETE RESTRICT
);

COMMENT ON TABLE alfi.intereses_financieros IS
    'Catálogo de intereses financieros generales usados para perfil y analítica agregada.';
COMMENT ON TABLE alfi.usuario_intereses_financieros IS
    'Relación normalizada entre usuarios e intereses financieros declarados.';
COMMENT ON COLUMN alfi.analisis.categoria_fraude IS
    'Categoría de fraude soportada por ALFI BOT; NULL cuando el contenido no corresponde a la taxonomía vigente.';
COMMENT ON COLUMN alfi.usuarios.provincia IS
    'Provincia de residencia declarada por el usuario para perfil general y analítica agregada.';
COMMENT ON COLUMN alfi.usuarios.rango_edad IS
    'Rango etario declarado por el usuario; evita almacenar fecha de nacimiento cuando no es necesaria.';
COMMENT ON COLUMN alfi.usuarios.terminos_aceptados IS
    'Aceptación expresa de Términos y Condiciones / Política de Privacidad para nuevos registros.';
COMMENT ON COLUMN alfi.usuarios.terminos_aceptados_en IS
    'Fecha y hora en que el usuario aceptó la versión vigente de los términos.';
COMMENT ON COLUMN alfi.usuarios.terminos_version IS
    'Versión de los Términos y Condiciones / Política de Privacidad aceptada por el usuario.';

-- ============================================================================
-- 3. COMPATIBILIDAD CON INSTALACIONES ANTERIORES
--    Solo cambios aditivos o sustitución controlada de reglas conocidas.
-- ============================================================================

ALTER TABLE alfi.usuarios
    ADD COLUMN IF NOT EXISTS celular varchar(10),
    ADD COLUMN IF NOT EXISTS fecha_actualizacion timestamp without time zone DEFAULT CURRENT_TIMESTAMP,
    ADD COLUMN IF NOT EXISTS provincia varchar(40),
    ADD COLUMN IF NOT EXISTS rango_edad varchar(10),
    ADD COLUMN IF NOT EXISTS terminos_aceptados boolean,
    ADD COLUMN IF NOT EXISTS terminos_aceptados_en timestamp without time zone,
    ADD COLUMN IF NOT EXISTS terminos_version varchar(20);

ALTER TABLE alfi.analisis
    ADD COLUMN IF NOT EXISTS categoria_fraude varchar(40);

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'chk_usuario_provincia'
          AND conrelid = 'alfi.usuarios'::regclass
    ) THEN
        ALTER TABLE alfi.usuarios
            ADD CONSTRAINT chk_usuario_provincia
            CHECK (
                provincia IS NULL
                OR provincia IN (
                    'Azuay', 'Bolívar', 'Cañar', 'Carchi', 'Chimborazo',
                    'Cotopaxi', 'El Oro', 'Esmeraldas', 'Galápagos', 'Guayas',
                    'Imbabura', 'Loja', 'Los Ríos', 'Manabí', 'Morona Santiago',
                    'Napo', 'Orellana', 'Pastaza', 'Pichincha', 'Santa Elena',
                    'Santo Domingo de los Tsáchilas', 'Sucumbíos', 'Tungurahua',
                    'Zamora Chinchipe'
                )
            );
    END IF;

    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'chk_usuario_rango_edad'
          AND conrelid = 'alfi.usuarios'::regclass
    ) THEN
        ALTER TABLE alfi.usuarios
            ADD CONSTRAINT chk_usuario_rango_edad
            CHECK (
                rango_edad IS NULL
                OR rango_edad IN ('18-24', '25-34', '35-44', '45-54', '55-64', '65+')
            );
    END IF;

    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'chk_usuario_terminos_coherencia'
          AND conrelid = 'alfi.usuarios'::regclass
    ) THEN
        ALTER TABLE alfi.usuarios
            ADD CONSTRAINT chk_usuario_terminos_coherencia
            CHECK (
                (
                    terminos_aceptados IS NULL
                    AND terminos_aceptados_en IS NULL
                    AND terminos_version IS NULL
                )
                OR
                (
                    terminos_aceptados IS TRUE
                    AND terminos_aceptados_en IS NOT NULL
                    AND nullif(btrim(terminos_version), '') IS NOT NULL
                )
            );
    END IF;
END
$$;

ALTER TABLE alfi.analisis
    DROP CONSTRAINT IF EXISTS chk_analisis_categoria_fraude;

ALTER TABLE alfi.analisis
    ADD CONSTRAINT chk_analisis_categoria_fraude
    CHECK (
        categoria_fraude IS NULL
        OR categoria_fraude IN (
            'credito_falso',
            'ponzi',
            'piramidal',
            'inversion_fraudulenta'
        )
    );

-- ============================================================================
-- 4. DATOS SEMILLA INDISPENSABLES
-- ============================================================================

INSERT INTO alfi.roles (nombre, descripcion)
VALUES
    ('administrador', 'Administración funcional y gestión de usuarios de ALFI BOT.'),
    ('auditor', 'Auditoría y reportería de ALFI BOT en modo de lectura.'),
    ('usuario', 'Uso operativo del analizador preventivo de ALFI BOT.')
ON CONFLICT (nombre) DO NOTHING;

WITH rol_analista AS (
    SELECT rol_id
    FROM alfi.roles
    WHERE nombre = 'analista'
),
rol_usuario AS (
    SELECT rol_id
    FROM alfi.roles
    WHERE nombre = 'usuario'
)
UPDATE alfi.usuarios u
SET
    rol_id = ru.rol_id,
    fecha_actualizacion = CURRENT_TIMESTAMP
FROM rol_analista ra
CROSS JOIN rol_usuario ru
WHERE u.rol_id = ra.rol_id;

DELETE FROM alfi.roles
WHERE nombre = 'analista';

INSERT INTO alfi.intereses_financieros (codigo, nombre)
VALUES
    ('ahorro', 'Ahorro'),
    ('creditos_financiamiento', 'Créditos y financiamiento'),
    ('inversiones', 'Inversiones'),
    ('seguros', 'Seguros'),
    ('emprendimiento', 'Emprendimiento'),
    ('educacion_financiera', 'Educación financiera')
ON CONFLICT (codigo)
DO UPDATE SET
    nombre = EXCLUDED.nombre,
    activo = true;

-- ============================================================================
-- 5. ÍNDICES
-- ============================================================================

CREATE UNIQUE INDEX IF NOT EXISTS uq_usuarios_correo_normalizado
    ON alfi.usuarios (lower(btrim(correo)));

CREATE INDEX IF NOT EXISTS idx_usuario_intereses_interes
    ON alfi.usuario_intereses_financieros (interes_id);

CREATE INDEX IF NOT EXISTS idx_analisis_categoria_riesgo_fecha
    ON alfi.analisis (categoria_fraude, nivel_riesgo, fecha_creacion);

CREATE INDEX IF NOT EXISTS idx_analisis_tipo_fecha
    ON alfi.analisis (tipo, fecha_creacion);

-- ============================================================================
-- 6. FUNCIONES Y TRIGGERS
-- ============================================================================

CREATE OR REPLACE FUNCTION alfi.fn_actualizar_fecha_usuario()
RETURNS trigger
LANGUAGE plpgsql
AS $$
BEGIN
    NEW.fecha_actualizacion := CURRENT_TIMESTAMP;
    RETURN NEW;
END;
$$;

CREATE OR REPLACE FUNCTION alfi.fn_registrar_auditoria()
RETURNS trigger
LANGUAGE plpgsql
SECURITY DEFINER
SET search_path TO 'alfi', 'public'
AS $$
DECLARE
    id_registro varchar(50);
BEGIN
    IF TG_OP = 'INSERT' THEN
        id_registro := to_jsonb(NEW) ->> TG_ARGV[0];

        INSERT INTO auditoria (
            tabla,
            operacion,
            registro_id,
            usuario_bd,
            fecha_operacion,
            datos_nuevos
        )
        VALUES (
            TG_TABLE_NAME,
            TG_OP,
            id_registro,
            SESSION_USER,
            CURRENT_TIMESTAMP,
            to_jsonb(NEW)
        );

        RETURN NEW;
    ELSIF TG_OP = 'UPDATE' THEN
        id_registro := to_jsonb(NEW) ->> TG_ARGV[0];

        INSERT INTO auditoria (
            tabla,
            operacion,
            registro_id,
            usuario_bd,
            fecha_operacion,
            datos_anteriores,
            datos_nuevos
        )
        VALUES (
            TG_TABLE_NAME,
            TG_OP,
            id_registro,
            SESSION_USER,
            CURRENT_TIMESTAMP,
            to_jsonb(OLD),
            to_jsonb(NEW)
        );

        RETURN NEW;
    ELSIF TG_OP = 'DELETE' THEN
        id_registro := to_jsonb(OLD) ->> TG_ARGV[0];

        INSERT INTO auditoria (
            tabla,
            operacion,
            registro_id,
            usuario_bd,
            fecha_operacion,
            datos_anteriores
        )
        VALUES (
            TG_TABLE_NAME,
            TG_OP,
            id_registro,
            SESSION_USER,
            CURRENT_TIMESTAMP,
            to_jsonb(OLD)
        );

        RETURN OLD;
    END IF;

    RETURN NULL;
END;
$$;

DROP TRIGGER IF EXISTS trg_actualizar_fecha_usuario ON alfi.usuarios;
CREATE TRIGGER trg_actualizar_fecha_usuario
BEFORE UPDATE ON alfi.usuarios
FOR EACH ROW
EXECUTE FUNCTION alfi.fn_actualizar_fecha_usuario();

DROP TRIGGER IF EXISTS trg_auditoria_analisis ON alfi.analisis;
CREATE TRIGGER trg_auditoria_analisis
AFTER INSERT OR UPDATE OR DELETE ON alfi.analisis
FOR EACH ROW
EXECUTE FUNCTION alfi.fn_registrar_auditoria('analisis_id');

DROP TRIGGER IF EXISTS trg_auditoria_recomendaciones ON alfi.recomendaciones;
CREATE TRIGGER trg_auditoria_recomendaciones
AFTER INSERT OR UPDATE OR DELETE ON alfi.recomendaciones
FOR EACH ROW
EXECUTE FUNCTION alfi.fn_registrar_auditoria('recomendacion_id');

DROP TRIGGER IF EXISTS trg_auditoria_usuarios ON alfi.usuarios;
CREATE TRIGGER trg_auditoria_usuarios
AFTER INSERT OR UPDATE OR DELETE ON alfi.usuarios
FOR EACH ROW
EXECUTE FUNCTION alfi.fn_registrar_auditoria('usuario_id');

-- ============================================================================
-- 7. VISTAS DE REPORTERÍA / BI
-- ============================================================================

CREATE OR REPLACE VIEW alfi.vw_reporte_actividad_usuarios AS
SELECT
    u.usuario_id,
    u.nombre AS usuario,
    u.correo,
    ro.nombre AS rol,
    count(DISTINCT a.analisis_id) AS total_analisis,
    count(DISTINCT a.analisis_id) FILTER (WHERE a.nivel_riesgo = 'alto') AS riesgos_altos,
    count(DISTINCT a.analisis_id) FILTER (WHERE a.nivel_riesgo = 'medio') AS riesgos_medios,
    count(DISTINCT a.analisis_id) FILTER (WHERE a.nivel_riesgo = 'bajo') AS riesgos_bajos,
    count(DISTINCT s.senal_id) AS total_senales,
    count(DISTINCT rec.recomendacion_id) AS total_recomendaciones,
    max(a.fecha_creacion) AS ultimo_analisis
FROM alfi.usuarios u
INNER JOIN alfi.roles ro
    ON u.rol_id = ro.rol_id
LEFT JOIN alfi.analisis a
    ON u.usuario_id = a.usuario_id
LEFT JOIN alfi.senales_alerta s
    ON a.analisis_id = s.analisis_id
LEFT JOIN alfi.recomendaciones rec
    ON a.analisis_id = rec.analisis_id
GROUP BY
    u.usuario_id,
    u.nombre,
    u.correo,
    ro.nombre;

CREATE OR REPLACE VIEW alfi.vw_reporte_riesgos_mensual AS
SELECT
    date_trunc('month', a.fecha_creacion)::date AS mes,
    a.nivel_riesgo,
    count(DISTINCT a.analisis_id) AS total_analisis,
    count(DISTINCT s.senal_id) AS total_senales,
    count(DISTINCT r.recomendacion_id) AS total_recomendaciones,
    round(
        count(DISTINCT a.analisis_id) * 100.0
        / sum(count(DISTINCT a.analisis_id)) OVER (
            PARTITION BY date_trunc('month', a.fecha_creacion)
        ),
        2
    ) AS porcentaje_mensual
FROM alfi.analisis a
LEFT JOIN alfi.senales_alerta s
    ON a.analisis_id = s.analisis_id
LEFT JOIN alfi.recomendaciones r
    ON a.analisis_id = r.analisis_id
GROUP BY
    date_trunc('month', a.fecha_creacion),
    a.nivel_riesgo;

CREATE OR REPLACE VIEW alfi.vw_reporte_fraude_riesgo AS
WITH analisis_detalle AS (
    SELECT
        a.analisis_id,
        date_trunc('month', a.fecha_creacion)::date AS mes,
        a.categoria_fraude,
        a.nivel_riesgo,
        a.tipo,
        count(DISTINCT s.senal_id) AS total_senales,
        count(DISTINCT r.recomendacion_id) AS total_recomendaciones
    FROM alfi.analisis a
    LEFT JOIN alfi.senales_alerta s
        ON s.analisis_id = a.analisis_id
    LEFT JOIN alfi.recomendaciones r
        ON r.analisis_id = a.analisis_id
    WHERE a.permitido = true
    GROUP BY
        a.analisis_id,
        date_trunc('month', a.fecha_creacion),
        a.categoria_fraude,
        a.nivel_riesgo,
        a.tipo
)
SELECT
    mes,
    categoria_fraude,
    nivel_riesgo,
    tipo,
    count(*) AS total_analisis,
    sum(total_senales)::bigint AS total_senales,
    sum(total_recomendaciones)::bigint AS total_recomendaciones,
    round(
        count(*) * 100.0
        / NULLIF(sum(count(*)) OVER (PARTITION BY mes), 0),
        2
    ) AS porcentaje_mensual
FROM analisis_detalle
GROUP BY
    mes,
    categoria_fraude,
    nivel_riesgo,
    tipo;

COMMENT ON VIEW alfi.vw_reporte_fraude_riesgo IS
    'BI agregado por mes, categoría soportada, riesgo y tipo de contenido; NULL indica análisis sin categoría de fraude soportada.';

CREATE OR REPLACE VIEW alfi.vw_reporte_contenido_perfil AS
WITH intereses_por_usuario AS (
    SELECT
        ui.usuario_id,
        string_agg(DISTINCT i.codigo, ', ' ORDER BY i.codigo) AS intereses_financieros
    FROM alfi.usuario_intereses_financieros ui
    INNER JOIN alfi.intereses_financieros i
        ON i.interes_id = ui.interes_id
       AND i.activo = true
    GROUP BY ui.usuario_id
)
SELECT
    date_trunc('month', a.fecha_creacion)::date AS mes,
    a.tipo,
    a.nivel_riesgo,
    a.categoria_fraude,
    COALESCE(u.provincia, 'No informado') AS provincia,
    COALESCE(u.rango_edad, 'No informado') AS rango_edad,
    COALESCE(ipu.intereses_financieros, 'Sin intereses registrados') AS intereses_financieros,
    count(DISTINCT a.analisis_id) AS total_analisis,
    count(DISTINCT a.usuario_id) AS usuarios_distintos,
    count(DISTINCT s.senal_id) AS total_senales
FROM alfi.analisis a
INNER JOIN alfi.usuarios u
    ON u.usuario_id = a.usuario_id
LEFT JOIN intereses_por_usuario ipu
    ON ipu.usuario_id = u.usuario_id
LEFT JOIN alfi.senales_alerta s
    ON s.analisis_id = a.analisis_id
WHERE a.permitido = true
GROUP BY
    date_trunc('month', a.fecha_creacion),
    a.tipo,
    a.nivel_riesgo,
    a.categoria_fraude,
    COALESCE(u.provincia, 'No informado'),
    COALESCE(u.rango_edad, 'No informado'),
    COALESCE(ipu.intereses_financieros, 'Sin intereses registrados');

COMMENT ON VIEW alfi.vw_reporte_contenido_perfil IS
    'BI agregado por contenido, riesgo, categoría soportada y atributos generales de perfil; no expone identidad individual.';

-- ============================================================================
-- 8. RBAC POSTGRESQL / MÍNIMO PRIVILEGIO
-- ============================================================================

DO $$
BEGIN
    IF NOT EXISTS (SELECT 1 FROM pg_roles WHERE rolname = 'rol_alfi_admin') THEN
        CREATE ROLE rol_alfi_admin NOLOGIN;
    END IF;

    IF NOT EXISTS (SELECT 1 FROM pg_roles WHERE rolname = 'rol_alfi_auditor') THEN
        CREATE ROLE rol_alfi_auditor NOLOGIN;
    END IF;

    IF NOT EXISTS (SELECT 1 FROM pg_roles WHERE rolname = 'rol_alfi_usuario') THEN
        CREATE ROLE rol_alfi_usuario NOLOGIN;
    END IF;
END
$$;

ALTER ROLE rol_alfi_admin
    NOLOGIN NOSUPERUSER NOCREATEDB NOCREATEROLE NOREPLICATION NOBYPASSRLS INHERIT;
ALTER ROLE rol_alfi_auditor
    NOLOGIN NOSUPERUSER NOCREATEDB NOCREATEROLE NOREPLICATION NOBYPASSRLS INHERIT;
ALTER ROLE rol_alfi_usuario
    NOLOGIN NOSUPERUSER NOCREATEDB NOCREATEROLE NOREPLICATION NOBYPASSRLS INHERIT;

REVOKE ALL ON SCHEMA alfi FROM PUBLIC;
GRANT USAGE ON SCHEMA alfi
    TO rol_alfi_admin, rol_alfi_auditor, rol_alfi_usuario;

REVOKE ALL PRIVILEGES ON ALL TABLES IN SCHEMA alfi
    FROM rol_alfi_admin, rol_alfi_auditor, rol_alfi_usuario;
REVOKE ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA alfi
    FROM rol_alfi_admin, rol_alfi_auditor, rol_alfi_usuario;

GRANT SELECT, INSERT, UPDATE, DELETE ON TABLE
    alfi.analisis,
    alfi.recomendaciones,
    alfi.roles,
    alfi.senales_alerta,
    alfi.usuarios,
    alfi.intereses_financieros,
    alfi.usuario_intereses_financieros
TO rol_alfi_admin;

GRANT SELECT ON TABLE alfi.auditoria TO rol_alfi_admin;
GRANT SELECT ON TABLE
    alfi.vw_reporte_actividad_usuarios,
    alfi.vw_reporte_riesgos_mensual,
    alfi.vw_reporte_fraude_riesgo,
    alfi.vw_reporte_contenido_perfil
TO rol_alfi_admin;
GRANT USAGE, SELECT ON ALL SEQUENCES IN SCHEMA alfi TO rol_alfi_admin;

GRANT SELECT ON TABLE alfi.auditoria TO rol_alfi_auditor;
GRANT SELECT ON TABLE
    alfi.vw_reporte_riesgos_mensual,
    alfi.vw_reporte_fraude_riesgo,
    alfi.vw_reporte_contenido_perfil
TO rol_alfi_auditor;

GRANT SELECT ON TABLE
    alfi.roles,
    alfi.intereses_financieros
TO rol_alfi_usuario;
GRANT SELECT, INSERT, UPDATE ON TABLE alfi.usuarios TO rol_alfi_usuario;
GRANT SELECT, INSERT, UPDATE, DELETE ON TABLE
    alfi.analisis,
    alfi.recomendaciones,
    alfi.senales_alerta,
    alfi.usuario_intereses_financieros
TO rol_alfi_usuario;
GRANT USAGE, SELECT ON ALL SEQUENCES IN SCHEMA alfi TO rol_alfi_usuario;

REVOKE ALL ON FUNCTION alfi.fn_registrar_auditoria() FROM PUBLIC;
REVOKE ALL ON FUNCTION alfi.fn_actualizar_fecha_usuario() FROM PUBLIC;

-- ============================================================================
-- 9. VALIDACIONES TRANSACCIONALES
-- ============================================================================

DO $$
DECLARE
    expected_tables text[] := ARRAY[
        'roles',
        'usuarios',
        'analisis',
        'senales_alerta',
        'recomendaciones',
        'auditoria',
        'intereses_financieros',
        'usuario_intereses_financieros'
    ];
    expected_views text[] := ARRAY[
        'vw_reporte_actividad_usuarios',
        'vw_reporte_riesgos_mensual',
        'vw_reporte_fraude_riesgo',
        'vw_reporte_contenido_perfil'
    ];
    object_name text;
BEGIN
    FOREACH object_name IN ARRAY expected_tables
    LOOP
        IF to_regclass(format('alfi.%I', object_name)) IS NULL THEN
            RAISE EXCEPTION 'ALFI BOT: falta la tabla alfi.%', object_name;
        END IF;
    END LOOP;

    FOREACH object_name IN ARRAY expected_views
    LOOP
        IF to_regclass(format('alfi.%I', object_name)) IS NULL THEN
            RAISE EXCEPTION 'ALFI BOT: falta la vista alfi.%', object_name;
        END IF;
    END LOOP;

    IF NOT EXISTS (
        SELECT 1 FROM pg_trigger
        WHERE tgrelid = 'alfi.analisis'::regclass
          AND tgname = 'trg_auditoria_analisis'
          AND NOT tgisinternal
    ) THEN
        RAISE EXCEPTION 'ALFI BOT: falta trg_auditoria_analisis.';
    END IF;

    IF NOT EXISTS (
        SELECT 1 FROM pg_trigger
        WHERE tgrelid = 'alfi.recomendaciones'::regclass
          AND tgname = 'trg_auditoria_recomendaciones'
          AND NOT tgisinternal
    ) THEN
        RAISE EXCEPTION 'ALFI BOT: falta trg_auditoria_recomendaciones.';
    END IF;

    IF NOT EXISTS (
        SELECT 1 FROM pg_trigger
        WHERE tgrelid = 'alfi.usuarios'::regclass
          AND tgname = 'trg_auditoria_usuarios'
          AND NOT tgisinternal
    ) THEN
        RAISE EXCEPTION 'ALFI BOT: falta trg_auditoria_usuarios.';
    END IF;

    IF NOT EXISTS (
        SELECT 1 FROM pg_trigger
        WHERE tgrelid = 'alfi.usuarios'::regclass
          AND tgname = 'trg_actualizar_fecha_usuario'
          AND NOT tgisinternal
    ) THEN
        RAISE EXCEPTION 'ALFI BOT: falta trg_actualizar_fecha_usuario.';
    END IF;

    IF EXISTS (SELECT 1 FROM alfi.roles WHERE nombre = 'analista') THEN
        RAISE EXCEPTION 'ALFI BOT: el rol funcional analista no debe existir.';
    END IF;

    IF (
        SELECT count(*)
        FROM alfi.roles
        WHERE nombre IN ('administrador', 'auditor', 'usuario')
    ) <> 3 THEN
        RAISE EXCEPTION 'ALFI BOT: catálogo de roles funcionales incompleto.';
    END IF;

    IF (
        SELECT count(*)
        FROM alfi.intereses_financieros
        WHERE activo = true
          AND codigo IN (
              'ahorro',
              'creditos_financiamiento',
              'inversiones',
              'seguros',
              'emprendimiento',
              'educacion_financiera'
          )
    ) <> 6 THEN
        RAISE EXCEPTION 'ALFI BOT: catálogo de intereses financieros incompleto.';
    END IF;

    IF NOT EXISTS (
        SELECT 1
        FROM pg_roles
        WHERE rolname = 'rol_alfi_admin'
          AND rolcanlogin = false
          AND rolsuper = false
    ) OR NOT EXISTS (
        SELECT 1
        FROM pg_roles
        WHERE rolname = 'rol_alfi_auditor'
          AND rolcanlogin = false
          AND rolsuper = false
    ) OR NOT EXISTS (
        SELECT 1
        FROM pg_roles
        WHERE rolname = 'rol_alfi_usuario'
          AND rolcanlogin = false
          AND rolsuper = false
    ) THEN
        RAISE EXCEPTION 'ALFI BOT: los roles PostgreSQL RBAC no cumplen el estado esperado.';
    END IF;
END
$$;

COMMIT;

-- ============================================================================
-- 10. RESUMEN DE INSTALACIÓN PARA PGADMIN
--     Estas consultas son solo lectura y sirven como evidencia inmediata.
-- ============================================================================

SELECT
    'ALFI BOT DATABASE READY' AS estado,
    current_database() AS base,
    current_user AS ejecutado_por,
    current_timestamp AS verificado_en;

SELECT
    table_name
FROM information_schema.tables
WHERE table_schema = 'alfi'
  AND table_type = 'BASE TABLE'
ORDER BY table_name;

SELECT
    table_name AS vista
FROM information_schema.views
WHERE table_schema = 'alfi'
ORDER BY table_name;

SELECT
    event_object_table AS tabla,
    trigger_name,
    event_manipulation AS operacion
FROM information_schema.triggers
WHERE trigger_schema = 'alfi'
ORDER BY event_object_table, trigger_name, event_manipulation;

SELECT
    rol_id,
    nombre,
    descripcion
FROM alfi.roles
ORDER BY rol_id;

SELECT
    rolname,
    rolcanlogin,
    rolsuper,
    rolcreatedb,
    rolcreaterole
FROM pg_roles
WHERE rolname IN ('rol_alfi_admin', 'rol_alfi_auditor', 'rol_alfi_usuario')
ORDER BY rolname;

-- ============================================================================
-- FIN — AFB-318 / T-22
-- ============================================================================
